--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "projectManagement",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "3.5"
+    "@rails/webpacker": "3.5",
+    "coffeescript": "1.12.7",
+    "vue": "^2.6.10",
+    "vue-loader": "14.2.2",
+    "vue-template-compiler": "^2.6.10",
+    "vue-turbolinks": "^2.0.4",
+    "vuedraggable": "^2.20.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
